--- a/Armageddon/Base.lproj/Main.storyboard
+++ b/Armageddon/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
         <!--Астеройды-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ViewControllerList" id="BYZ-38-t0r" customClass="ViewController" customModule="Armageddon" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ListOfAsteroidsViewController" id="BYZ-38-t0r" customClass="ListOfAsteroidsViewController" customModule="Armageddon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
