--- a/Armageddon/Base.lproj/Main.storyboard
+++ b/Armageddon/Base.lproj/Main.storyboard
@@ -163,12 +163,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VzF-II-Gus">
-                                <rect key="frame" x="0.0" y="444" width="414" height="418"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d5D-GE-H5G">
-                                <rect key="frame" x="0.0" y="44" width="414" height="400"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="450"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yGO-s6-nTn">
                                         <rect key="frame" x="16" y="8" width="382" height="140.5"/>
@@ -189,7 +185,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hs0-y4-1cn">
-                                        <rect key="frame" x="16" y="364" width="382" height="28"/>
+                                        <rect key="frame" x="16" y="414" width="382" height="28"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Оценка:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIY-oK-VVV">
                                                 <rect key="frame" x="0.0" y="0.0" width="64.5" height="28"/>
@@ -220,50 +216,53 @@
                                                         <integer key="value" value="14"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="addKillList:" destination="SWG-XK-d8F" eventType="touchUpInside" id="Pdv-Zu-B5u"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bMU-jJ-UDw">
-                                        <rect key="frame" x="16" y="156.5" width="382" height="199.5"/>
+                                        <rect key="frame" x="16" y="156.5" width="382" height="249.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Диаметр: 300м" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CiL-B6-lwD">
-                                                <rect key="frame" x="0.0" y="0.0" width="123" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="123" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Подлетает 2 ноября 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20F-s9-dA1">
-                                                <rect key="frame" x="0.0" y="29.5" width="203.5" height="22"/>
+                                                <rect key="frame" x="0.0" y="37" width="203.5" height="28.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="на расстояние 9 331 775 км" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YeY-Xg-iWj">
-                                                <rect key="frame" x="0.0" y="59.5" width="221.5" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="73.5" width="221.5" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5o-QC-iYy">
-                                                <rect key="frame" x="0.0" y="89" width="41.5" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="110.5" width="41.5" height="28.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clJ-xS-xHH">
-                                                <rect key="frame" x="0.0" y="118.5" width="41.5" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="147" width="41.5" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpy-G1-mR7">
-                                                <rect key="frame" x="0.0" y="148" width="41.5" height="22"/>
+                                                <rect key="frame" x="0.0" y="184" width="41.5" height="28.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ds-Om-gmv">
-                                                <rect key="frame" x="0.0" y="178" width="41.5" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="220.5" width="41.5" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -281,8 +280,8 @@
                                     <constraint firstAttribute="bottom" secondItem="hs0-y4-1cn" secondAttribute="bottom" constant="8" id="aO0-AC-K6o"/>
                                     <constraint firstItem="yGO-s6-nTn" firstAttribute="top" secondItem="d5D-GE-H5G" secondAttribute="top" constant="8" id="btJ-gm-PVb"/>
                                     <constraint firstAttribute="trailing" secondItem="hs0-y4-1cn" secondAttribute="trailing" constant="16" id="dmM-te-rnW"/>
+                                    <constraint firstAttribute="height" constant="450" id="eC0-l5-Is8"/>
                                     <constraint firstItem="yGO-s6-nTn" firstAttribute="leading" secondItem="d5D-GE-H5G" secondAttribute="leading" constant="16" id="feB-i1-vml"/>
-                                    <constraint firstAttribute="height" constant="400" id="slk-5e-jKO"/>
                                     <constraint firstAttribute="trailing" secondItem="bMU-jJ-UDw" secondAttribute="trailing" constant="16" id="zsV-LG-KN6"/>
                                 </constraints>
                             </view>
@@ -290,13 +289,9 @@
                         <viewLayoutGuide key="safeArea" id="twi-J1-Xja"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="twi-J1-Xja" firstAttribute="bottom" secondItem="VzF-II-Gus" secondAttribute="bottom" id="8uB-se-YO1"/>
-                            <constraint firstItem="VzF-II-Gus" firstAttribute="leading" secondItem="twi-J1-Xja" secondAttribute="leading" id="aiB-e8-55s"/>
                             <constraint firstItem="twi-J1-Xja" firstAttribute="trailing" secondItem="d5D-GE-H5G" secondAttribute="trailing" id="coK-n1-1qs"/>
                             <constraint firstItem="d5D-GE-H5G" firstAttribute="top" secondItem="twi-J1-Xja" secondAttribute="top" id="czi-5c-D8j"/>
                             <constraint firstItem="d5D-GE-H5G" firstAttribute="leading" secondItem="twi-J1-Xja" secondAttribute="leading" id="dcz-Ph-2zB"/>
-                            <constraint firstItem="VzF-II-Gus" firstAttribute="top" secondItem="d5D-GE-H5G" secondAttribute="bottom" id="hDY-MC-9eT"/>
-                            <constraint firstItem="twi-J1-Xja" firstAttribute="trailing" secondItem="VzF-II-Gus" secondAttribute="trailing" id="hug-oN-rqM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -305,12 +300,13 @@
                         <outlet property="destroyButton" destination="jDk-AL-qMW" id="jzm-k5-2ZK"/>
                         <outlet property="diametrLabel" destination="CiL-B6-lwD" id="Naj-xD-7Z3"/>
                         <outlet property="distanceLabel" destination="Rpy-G1-mR7" id="Mm4-bt-RfE"/>
+                        <outlet property="flightDistanceLabel" destination="YeY-Xg-iWj" id="b8Z-4w-289"/>
+                        <outlet property="flightTimeLabel" destination="20F-s9-dA1" id="hyS-gg-UhU"/>
                         <outlet property="isHazardLabel" destination="M1H-sJ-ccs" id="RzQ-eB-499"/>
                         <outlet property="mainView" destination="d5D-GE-H5G" id="rtL-xw-72O"/>
                         <outlet property="nameLabel" destination="Gs3-5j-gs3" id="FfM-PL-re7"/>
                         <outlet property="orbitLabel" destination="5ds-Om-gmv" id="BbD-96-iJx"/>
                         <outlet property="speedLabel" destination="O5o-QC-iYy" id="ehq-dC-fZm"/>
-                        <outlet property="tableView" destination="VzF-II-Gus" id="71O-kg-G6U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kbg-A4-d3l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
