Добавлено удаление из таблицы "Список на уничтожение"

--- a/Armageddon/Cells/AsteroidTableViewCell.xib
+++ b/Armageddon/Cells/AsteroidTableViewCell.xib
@@ -31,6 +31,8 @@
                                         <rect key="frame" x="327" y="110.5" width="35" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="0sx-gH-SE0"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="GrU-Yf-zhq"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="35" id="KfX-lu-fBn"/>
                                             <constraint firstAttribute="width" constant="35" id="UDx-vQ-8mg"/>
                                         </constraints>
                                     </imageView>
